use rabbitMq to api createOrder

--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -25,6 +25,14 @@
     "ExpiresInMinutes": 60
   },
 
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "QueueName": "order_queue",
+    "Durable": true,
+    "Exclusive": false,
+    "AutoDelete": false
+  },
+
   "Google": {
     "ClientId": "700062141891-nrurdokn2k70lsci0tmuqdbei6lqjfi4.apps.googleusercontent.com",
     "ClientSecret": "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",
